[gd_scene load_steps=3 format=3 uid="uid://bqrwx6fgoaejr"]

[ext_resource type="Script" uid="uid://cc805k73i4r2h" path="res://scripts/ui_scripts/choice_screen.gd" id="1_25sdy"]

[sub_resource type="LabelSettings" id="LabelSettings_mynma"]
font_size = 36
font_color = Color(0, 0, 0, 1)
outline_size = 4
outline_color = Color(0.658824, 0, 0, 1)

[node name="choice_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_25sdy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0923971, 0.0923971, 0.0923971, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.0
offset_top = 36.0
offset_right = 221.0
offset_bottom = 209.0
grow_horizontal = 2
text = "Will you keep fighting?"
label_settings = SubResource("LabelSettings_mynma")
horizontal_alignment = 1
vertical_alignment = 2

[node name="YesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 332.0
offset_right = 376.0
offset_bottom = 395.0
theme_override_font_sizes/font_size = 40
text = "Yes"

[node name="NoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 797.0
offset_top = 332.0
offset_right = 964.0
offset_bottom = 395.0
theme_override_font_sizes/font_size = 40
text = "No"

[node name="TestAreaButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "To Testing Area"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="TestAreaButton" to="." method="_on_test_area_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
